--- a/workbench/docker-compose.yml
+++ b/workbench/docker-compose.yml
@@ -27,28 +27,15 @@ services:
       - redis
       - postgres
     command: uvicorn --host=0.0.0.0 --port 4000 main:app
-  # prometheus:
-  #   image: prom/prometheus
-  #   ports:
-  #     - "9090:9090"
-  #   volumes:
-  #     - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-  #   command:
-  #     - '--config.file=/etc/prometheus/prometheus.yml'
-  #     - '--web.external-url=http://localhost:9090/prometheus/'
-  # node_exporter:
-  #   image: prom/node-exporter
-  # grafana:
-  #   image: grafana/grafana
-  #   env_file:
-  #     - .env
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     GF_SERVER_ROOT_URL: http://localhost:3000/grafana/
-  #   volumes:
-  #     - ${GF_DATA_VOLUME}:/var/lib/grafana
-  #     - ./config/grafana/grafana.ini:/etc/grafana/grafana.ini
+  worker:
+    build:
+      context: ./worker
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - redis
+    command: celery -A main worker --loglevel=info
   nginx:
     build:
       context: ./client
@@ -60,5 +47,3 @@ services:
       - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - api
-      # - prometheus
-      # - grafana
