--- a/workbench/server/requirements.txt
+++ b/workbench/server/requirements.txt
@@ -1,8 +1,14 @@
+amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.4.0
+billiard==4.2.0
+celery==5.4.0
 certifi==2024.7.4
 cffi==1.16.0
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==42.0.8
 dnspython==2.6.1
 email_validator==2.2.0
@@ -17,12 +23,14 @@ itsdangerous==2.2.0
 JayDeBeApi==1.2.3
 Jinja2==3.1.4
 JPype1==1.5.0
+kombu==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.6
 packaging==24.1
 passlib==1.7.4
+prompt_toolkit==3.0.47
 psycopg2-binary==2.9.9
 pycparser==2.22
 pydantic==2.8.2
@@ -30,18 +38,24 @@ pydantic-extra-types==2.9.0
 pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+redis==5.0.8
 rich==13.7.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
+tzdata==2024.1
 ujson==5.10.0
 uvicorn==0.30.1
 uvloop==0.19.0
+vine==5.1.0
 watchfiles==0.22.0
+wcwidth==0.2.13
 websockets==12.0
