--- a/workbench/worker/Dockerfile
+++ b/workbench/worker/Dockerfile
@@ -9,6 +9,7 @@ ENV LANG=ko_KR.UTF-8 \
 RUN ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime
 RUN echo ${TZ} > /etc/timezone
 
+RUN rm -rf /var/lib/apt/lists/*
 RUN apt-get update && \
     apt-get install -y openjdk-11-jdk && \
     apt-get install -y python3.11 && \
