--- a/workbench/docker-compose.linux-dev.yml
+++ b/workbench/docker-compose.linux-dev.yml
@@ -59,4 +59,6 @@ services:
       - .env
     depends_on:
       - redis
+    volumes:
+      - ./worker/app:/app
     command: celery -A main worker --loglevel=info
